# CameraAlerts

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO  configExample.xml  ffmpeg_loop_video.txt  openssl_results.txt  run_loop.sh  version.hpp.in
Image/: CImageBuffer.hpp  CMakeLists.txt  CMatWithTimeStamp.hpp  ImageType.hpp
Image/motionAlgorithms/: CAbstractAlertAlgorighm.hpp  CAlgoBaseConfig.hpp  CBackgroundSubtractorTest.hpp  CFaceDetect.hpp  CFaceDetectConfig.hpp  CMakeLists.txt  CMoveDetect.hpp  CMoveDetectBackgroundSubtractorConfig.hpp  CMoveDetectBitwiseAnd.hpp  CMoveDetectConfig.hpp  CPHash.hpp  CPHashConfig.hpp  IAlertAlgorithm.hpp
Image/motionAlgorithms/private/: CAbstractAlertAlgorighm.cpp  CBackgroundSubtractorTest.cpp  CFaceDetect.cpp  CMoveDetect.cpp  CMoveDetectBitwiseAnd.cpp  CMoveDetectConfig.cpp  CPHash.cpp
Image/private/: CImageBuffer.cpp  CMatWithTimeStamp.cpp  CMatWithTimeStampImpl.cpp  CMatWithTimeStampImpl.hpp  CRingBuffer.cpp  CRingBuffer.hpp
Image/videoInput/: CInputConfig.hpp  CMakeLists.txt  CVideoCapture.hpp
Image/videoInput/private/: CVideoCapture.cpp
ImageServer/: CImageSenderWorker.hpp  CImageServer.hpp  CMakeLists.txt
ImageServer/private/: CImageSenderWorker.cpp  CImageServer.cpp  CSerializer.cpp  CSerializer.hpp
MJPEGServer/: CMJPEGFactory.hpp  CMJPEGServerConfig.hpp  CMakeLists.txt
MJPEGServer/private/: CClientConnectionMJPEG.cpp  CClientConnectionMJPEG.hpp  CImageServerMJPEG.cpp  CImageServerMJPEG.hpp  CMJPEGFactory.cpp
Net/: CMakeLists.txt  CNetConnectionConfig.hpp  CNetCryptionConfig.hpp  CNetFactory.hpp  CNetValues.hpp  CServerFactory.hpp  CUserData.hpp  CWorkerBase.hpp  INet.hpp  IServer.hpp  IWorker.hpp  Types.hpp
Net/AES/: CAES.cpp  CAES.hpp  CAESCrypt.cpp  CAESCryptDecrypt.hpp  CAESDecrypt.cpp
Net/clients/: CTCPClient.cpp  CTCPClient.hpp  CUDPClient.cpp  CUDPClient.hpp
Net/private/: CNetBase.cpp  CNetBase.hpp  CNetFactory.cpp  CServerFactory.cpp  CTCPNetObject.cpp  CTCPNetObject.hpp  CUDPNetObject.cpp  CUDPNetObject.hpp  CWorkerBase.cpp  IWorker.cpp
Net/servers/: CClientConn.cpp  CClientConn.hpp  CTCPSSLServer.cpp  CTCPSSLServer.hpp  CTCPServer.cpp  CTCPServer.hpp  CUDPServer.cpp  CUDPServer.hpp
Text/: CBufferData.hpp  CMakeLists.txt  CTextBuffer.hpp  CTextPatterns.hpp
Text/private/: CBufferData.cpp  CTextBuffer.cpp
TextToSpeech/: CMakeLists.txt  CTextToSpeech.hpp  CTextToSpeechConfig.hpp
TextToSpeech/hello_speak/: CMakeLists.txt  main.cpp  mainwindow.cpp
TextToSpeech/private/: CTextToSpeech.cpp
Tools/: CMakeLists.txt
Tools/algoTest/: CMakeLists.txt  main.cpp
Tools/testProject/: CMakeLists.txt  main.cpp
Tools/test_code/: main.cpp
Tools/test_code/opensslWrapper/: CMD4.hpp  CMakeLists.txt
Tools/test_code/opensslWrapper/private/: CMD4.cpp
Tools/videoFinalizer/: CMakeLists.txt  main.cpp
alerts/: CAlertCoefConfig.hpp  CAlertConfig.hpp  CAlertSound.hpp  CAlertSoundConfig.hpp  CCommonAlert.hpp  CCommonAlertConfig.hpp  CFinalVideoWriter.hpp  CFinalVideoWriterConfig.hpp  CMakeLists.txt  CSMTPAlert.hpp  CSMTPAlertConfig.hpp  CTelegramAlertNotification.hpp  CTelegramAlertNotificationConfig.hpp  IAlert.hpp
alerts/private/: CAlertSound.cpp  CCommonAlert.cpp  CCommonAlertConfig.cpp  CFinalVideoWriter.cpp  CSMTPAlert.cpp  CTelegramAlertNotification.cpp  CVideoWriter.cpp  CVideoWriter.hpp  IAlert.cpp
alerts/smtp/: CMakeLists.txt  CSMTPSender.cpp  CSMTPSender.hpp
alerts/zlipWrapper/: CCRC.hpp  CMakeLists.txt  CZipCreator.hpp
alerts/zlipWrapper/private/: CCRC.cpp  CZipCreator.cpp
arduino_sketch/sketch_sensors/: sketch_test_ir_move.ino
client/: CClient.hpp  CImageReceiverWorker.hpp  CMakeLists.txt
client/private/: CClient.cpp  CDeSerializer.cpp  CDeSerializer.hpp  CImageReceiverWorker.cpp
command/: CCommand.hpp  CCommandExecutor.hpp  CMakeLists.txt
command/private/: CCommandExecutor.cpp
common/: CAlertNotification.hpp  CAlgoConfig.hpp  CConfig.hpp  CConnectionSettings.hpp  CDateTime.hpp  CHashFunctions.hpp  CMainFunctions.hpp  CMakeLists.txt  CMemoryUssage.hpp  CNetProtocol.hpp  CRunStatus.hpp  CVersion.hpp  NTypes.hpp
common/private/: CAlertNotification.cpp  CAlgoConfig.cpp  CConfig.cpp  CDateTime.cpp  CHashFunctions.cpp  CMainFunctions.cpp  CMemoryUssage.cpp  CVersion.cpp  CXMLParser.cpp  CXMLParser.hpp  NetTypes.cpp  Printers.cpp
conditions/: CCondition.hpp  CConditionExpression.hpp  CMakeLists.txt
conditions/private/: CConditionExpression.cpp
db/: CDBConfig.hpp  CDBConnection.hpp  CMakeLists.txt
db/private/: CDBConfig.cpp  CDBConnection.cpp
gui/: CGuiConfig.hpp  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
install/: info.txt  my__play_loop.sh
logging/: CClockExecution.hpp  CLoggerConfig.hpp  CMakeLists.txt  Log.hpp
logging/private/: CClockExecution.cpp  Log.cpp
main/: CMainApplication.cpp  CMakeLists.txt
serial/: CMakeLists.txt  CSerialPortConfig.hpp  CSerialPortReader.hpp  CSerialPorts.hpp
serial/private/: CSerialPortReader.cpp  CSerialPorts.cpp
webDownload/: CMakeLists.txt  CWebDownloader.hpp  CWebDownloaderConfig.hpp
webDownload/private/: CWebDownloader.cpp
