PROJECT(${IMAGE_LIB_NAME})

ADD_SUBDIRECTORY(videoInput)
IF (BUILD_MOTION_ALGO)
    ADD_SUBDIRECTORY(motionAlgorithms)
ENDIF (BUILD_MOTION_ALGO)

file(GLOB_RECURSE SOURCES *.hpp *cpp)

ADD_LIBRARY(${IMAGE_LIB_NAME} ${LIBRARY_TYPE} ${SOURCES} )

INSTALL (
   TARGETS ${IMAGE_LIB_NAME}
   RUNTIME DESTINATION ${INSTALL_BIN_DIR}
   LIBRARY DESTINATION ${INSTALL_LIB_DIR}
   ARCHIVE DESTINATION ${INSTALL_LIB_DIR}
)

IF (INSTALL_HEADERS)
    FILE(GLOB INSTALL_HEADERS  "*.hpp" )
    STRING(REPLACE ${CMAKE_ROOT_SOURCES} ""  INSTALL_PATH ${PROJECT_SOURCE_DIR})
    INSTALL (
        FILES  ${INSTALL_HEADERS}
        DESTINATION ${INSTALL_SRC_DIR}/${INSTALL_PATH}/
    )
ENDIF (INSTALL_HEADERS)
