PROJECT(${IMAGE_SERVER_LIB_NAME})

file(GLOB_RECURSE SERVER_LIB_SOURCES *cpp)
file(GLOB_RECURSE SERVER_LIB_HEADERS *.hpp)


ADD_LIBRARY(${IMAGE_SERVER_LIB_NAME} ${LIBRARY_TYPE} ${SERVER_LIB_SOURCES} ${SERVER_LIB_HEADERS})

INCLUDE_DIRECTORIES(${Qt5Network_INCLUDE_DIRS})
set_target_properties(${IMAGE_SERVER_LIB_NAME}  PROPERTIES AUTOMOC TRUE)

TARGET_LINK_LIBRARIES( ${IMAGE_SERVER_LIB_NAME} ${NET_LIB_NAME} )
TARGET_LINK_LIBRARIES( ${IMAGE_SERVER_LIB_NAME} ${COMMON_LIB_NAME} )
TARGET_LINK_LIBRARIES( ${IMAGE_SERVER_LIB_NAME} ${Qt5Network_LIBRARIES}  )

INSTALL (
    TARGETS ${IMAGE_SERVER_LIB_NAME}
    RUNTIME DESTINATION ${INSTALL_BIN_DIR}
    LIBRARY DESTINATION ${INSTALL_LIB_DIR}
    ARCHIVE DESTINATION ${INSTALL_LIB_DIR}
    )

IF (INSTALL_HEADERS)
    FILE(GLOB INSTALL_HEADERS  "*.hpp" )
    STRING(REPLACE ${CMAKE_ROOT_SOURCES} ""  INSTALL_PATH ${PROJECT_SOURCE_DIR})
    INSTALL (
        FILES  ${INSTALL_HEADERS}
        DESTINATION ${INSTALL_SRC_DIR}/${INSTALL_PATH}/
    )
ENDIF (INSTALL_HEADERS)
