PROJECT(${NET_LIB_NAME})
find_package(OpenSSL)

file(GLOB NET_LIB_SOURCES "*.hpp" "private/*.hpp" "*.cpp"
    servers/*
    clients/*
    udpClient/*
    AES/*
    private/*.cpp
    )

INCLUDE_DIRECTORIES(${Qt5Network_INCLUDE_DIRS})
ADD_LIBRARY(${NET_LIB_NAME} ${LIBRARY_TYPE} ${NET_LIB_SOURCES})
set_target_properties(${NET_LIB_NAME}  PROPERTIES AUTOMOC TRUE)

TARGET_LINK_LIBRARIES( ${NET_LIB_NAME} ${OPENSSL_LIBRARIES} ${Qt5Network_LIBRARIES})

INSTALL (
   TARGETS ${NET_LIB_NAME}
   RUNTIME DESTINATION ${INSTALL_BIN_DIR}
   LIBRARY DESTINATION ${INSTALL_LIB_DIR}
   ARCHIVE DESTINATION ${INSTALL_LIB_DIR}
   )

IF (INSTALL_HEADERS)
    FILE(GLOB INSTALL_HEADERS  "*.hpp" )
    STRING(REPLACE ${CMAKE_ROOT_SOURCES} ""  INSTALL_PATH ${PROJECT_SOURCE_DIR})
    INSTALL (
        FILES  ${INSTALL_HEADERS}
        DESTINATION ${INSTALL_SRC_DIR}/${INSTALL_PATH}/
    )
ENDIF (INSTALL_HEADERS)
