PROJECT(${ALERTS_LIB_NAME})

IF (BUILD_SMTP)
    add_definitions(-D__WITH_SMPT__)
ENDIF (BUILD_SMTP)

IF (BUILD_ZLIB)
    ADD_SUBDIRECTORY(zlipWrapper)
    add_definitions(-D__WITH_ZLIB__)

    IF (BUILD_SMTP)
        ADD_SUBDIRECTORY(smtp)
    ENDIF (BUILD_SMTP)
ENDIF (BUILD_ZLIB)

IF (BUILD_TELEGRAM)
    ADD_SUBDIRECTORY(tgbot-cpp)
    add_definitions(-D__BUILD_TELEGRAM_BOT__)
ENDIF (BUILD_TELEGRAM)

IF (BUILD_XMPP)
    ADD_SUBDIRECTORY(dxmpp)
    add_definitions(-D__BUILD_XMPP_BOT__)
ENDIF (BUILD_XMPP)

IF (BUILD_WITH_QT_SOUND)
    FIND_PACKAGE (Qt5 COMPONENTS Multimedia REQUIRED)
    ADD_DEFINITIONS(-D__BUILD_WITH_QT_SOUND__)

    INCLUDE_DIRECTORIES(${Qt5Multimedia_INCLUDE_DIRS})
ENDIF (BUILD_WITH_QT_SOUND)

file(GLOB ALERTS_SOURCES
    *.hpp
    private/*.cpp
    private/*.hpp)

ADD_LIBRARY(${ALERTS_LIB_NAME} ${LIBRARY_TYPE} ${ALERTS_SOURCES})
INCLUDE_DIRECTORIES( tgbot-cpp/include/ )

IF (BUILD_SMTP)
    TARGET_LINK_LIBRARIES( ${ALERTS_LIB_NAME} ${SMTP_LIB_NAME} )
ENDIF (BUILD_SMTP)

IF (BUILD_WITH_QT_SOUND)
    TARGET_LINK_LIBRARIES( ${ALERTS_LIB_NAME} ${Qt5Multimedia_LIBRARIES} )
ENDIF (BUILD_WITH_QT_SOUND)

IF (BUILD_TELEGRAM)
    TARGET_LINK_LIBRARIES( ${ALERTS_LIB_NAME} TgBot)
    IF (BUILD_SERIAL)
        TARGET_LINK_LIBRARIES( ${ALERTS_LIB_NAME} ${SERIAL_LIB_NAME} )
    ENDIF (BUILD_SERIAL)
ENDIF (BUILD_TELEGRAM)

set_target_properties(${ALERTS_LIB_NAME}  PROPERTIES AUTOMOC TRUE)

INSTALL (
    TARGETS ${ALERTS_LIB_NAME}
    RUNTIME DESTINATION ${INSTALL_BIN_DIR}
    LIBRARY DESTINATION ${INSTALL_LIB_DIR}
    ARCHIVE DESTINATION ${INSTALL_LIB_DIR}
)

IF (INSTALL_HEADERS)
    FILE(GLOB INSTALL_HEADERS  "*.hpp" )
    STRING(REPLACE ${CMAKE_ROOT_SOURCES} ""  INSTALL_PATH ${PROJECT_SOURCE_DIR})
    INSTALL (
        FILES  ${INSTALL_HEADERS}
        DESTINATION ${INSTALL_SRC_DIR}/${INSTALL_PATH}/
    )
ENDIF (INSTALL_HEADERS)
