PROJECT(${CLIENT_LIB_NAME})

file(GLOB CLIENT_SOURCES *.hpp private/*.cpp *.hpp)

ADD_LIBRARY(${CLIENT_LIB_NAME} ${LIBRARY_TYPE}  ${CLIENT_SOURCES})

TARGET_LINK_LIBRARIES( ${CLIENT_LIB_NAME} ${NET_LIB_NAME} )

set_target_properties(${CLIENT_LIB_NAME}  PROPERTIES AUTOMOC TRUE)

INSTALL (
   TARGETS ${CLIENT_LIB_NAME}
   RUNTIME DESTINATION ${INSTALL_BIN_DIR}
   LIBRARY DESTINATION ${INSTALL_LIB_DIR}
   ARCHIVE DESTINATION ${INSTALL_LIB_DIR}
)

IF (INSTALL_HEADERS)
    FILE(GLOB INSTALL_HEADERS  "*.hpp" )
    STRING(REPLACE ${CMAKE_ROOT_SOURCES} ""  INSTALL_PATH ${PROJECT_SOURCE_DIR})
    INSTALL (
        FILES  ${INSTALL_HEADERS}
        DESTINATION ${INSTALL_SRC_DIR}/${INSTALL_PATH}/
    )
ENDIF (INSTALL_HEADERS)
