PROJECT(${COMMAND_LIB_NAME})

file(GLOB CONDITIONS_SOURCES
    *.hpp
    private/*.cpp
    private/*.hpp)

ADD_LIBRARY(${COMMAND_LIB_NAME} ${LIBRARY_TYPE} ${CONDITIONS_SOURCES})

IF (BUILD_SERIAL)
    TARGET_LINK_LIBRARIES( ${COMMAND_LIB_NAME} ${SERIAL_LIB_NAME} )
ENDIF (BUILD_SERIAL)

TARGET_LINK_LIBRARIES( ${COMMAND_LIB_NAME} ${Qt5Qml_LIBRARIES} ${Qt5Core_LIBRARIES} )
IF (BUILD_TEXT_TO_SPEACH)
    add_definitions(-D__WITH_TEXT_TO_SPEECH__)
    TARGET_LINK_LIBRARIES( ${COMMAND_LIB_NAME} ${TEXT_TO_SPEECH_LIB_NAME} )
ENDIF (BUILD_TEXT_TO_SPEACH)


INSTALL (
   TARGETS ${COMMAND_LIB_NAME}
   RUNTIME DESTINATION ${INSTALL_BIN_DIR}
   LIBRARY DESTINATION ${INSTALL_LIB_DIR}
   ARCHIVE DESTINATION ${INSTALL_LIB_DIR}
)

IF (INSTALL_HEADERS)
    FILE(GLOB INSTALL_HEADERS  "*.hpp" )
    STRING(REPLACE ${CMAKE_ROOT_SOURCES} ""  INSTALL_PATH ${PROJECT_SOURCE_DIR})
    INSTALL (
        FILES  ${INSTALL_HEADERS}
        DESTINATION ${INSTALL_SRC_DIR}/${INSTALL_PATH}/
    )
ENDIF (INSTALL_HEADERS)
