PROJECT(${CONDITIONS_LIB_NAME})

file(GLOB CONDITIONS_SOURCES
    *.hpp
    private/*.cpp
    private/*.hpp)
set(CMAKE_AUTOMOC ON)

INCLUDE_DIRECTORIES(${Qt5Qml_INCLUDE_DIRS})
ADD_LIBRARY(${CONDITIONS_LIB_NAME} ${LIBRARY_TYPE} ${CONDITIONS_SOURCES})

TARGET_LINK_LIBRARIES( ${CONDITIONS_LIB_NAME} ${Qt5Qml_LIBRARIES} ${Qt5Core_LIBRARIES} ${COMMAND_LIB_NAME} )

INSTALL (
   TARGETS ${CONDITIONS_LIB_NAME}
   RUNTIME DESTINATION ${INSTALL_BIN_DIR}
   LIBRARY DESTINATION ${INSTALL_LIB_DIR}
   ARCHIVE DESTINATION ${INSTALL_LIB_DIR}
)

IF (INSTALL_HEADERS)
    FILE(GLOB INSTALL_HEADERS  "*.hpp" )
    STRING(REPLACE ${CMAKE_ROOT_SOURCES} ""  INSTALL_PATH ${PROJECT_SOURCE_DIR})
    INSTALL (
        FILES  ${INSTALL_HEADERS}
        DESTINATION ${INSTALL_SRC_DIR}/${INSTALL_PATH}/
    )
ENDIF (INSTALL_HEADERS)

