project(${GUI_MAIN})

find_package(Qt5Widgets)

add_definitions(-D__INSTALL_BIN_DIR__="${CMAKE_INSTALL_PREFIX}/${MAIN_BIN_DIR}")

set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set (MyProjectLib_ui  mainwindow.ui)

qt5_wrap_ui (MyProjectLib_ui_moc  ${MyProjectLib_ui})

INCLUDE_DIRECTORIES(${Qt5Widgets_INCLUDE_DIRS})

ADD_EXECUTABLE( ${GUI_MAIN} main.cpp ${MyProjectLib_ui_moc} mainwindow.cpp)

TARGET_LINK_LIBRARIES( ${GUI_MAIN} ${LOG_LIB_NAME} )
TARGET_LINK_LIBRARIES( ${GUI_MAIN} ${COMMON_LIB_NAME})
TARGET_LINK_LIBRARIES( ${GUI_MAIN} ${HELP_LINK_LIBRARIES})
TARGET_LINK_LIBRARIES( ${GUI_MAIN} ${CLIENT_LIB_NAME})
TARGET_LINK_LIBRARIES (${GUI_MAIN}  Qt5::Widgets)

IF (BUILD_SERIAL)
    TARGET_LINK_LIBRARIES( ${GUI_MAIN} ${SERIAL_LIB_NAME} )
ENDIF (BUILD_SERIAL)

#TARGET_LINK_LIBRARIES( ${GUI_MAIN} ${NET_LIB_NAME})
TARGET_LINK_LIBRARIES( ${GUI_MAIN} ${IMAGE_SERVER_LIB_NAME})


SET (GUI_BIN_DIR  ${INSTALL_BIN_DIR}/gui/)

INSTALL (
    TARGETS ${GUI_MAIN}
    RUNTIME DESTINATION ${GUI_BIN_DIR}
    LIBRARY DESTINATION ${INSTALL_LIB_DIR}
    ARCHIVE DESTINATION ${INSTALL_LIB_DIR}
    )

INSTALL (
    FILES  ${CONFIG_FILE}
    DESTINATION ${GUI_BIN_DIR}
    )



