PROJECT(${LOG_LIB_NAME})

file(GLOB_RECURSE LOG_SOURCES *.cpp)
file(GLOB_RECURSE LOG_HEADERS *.hpp)

IF (USE_PROFILER)
    ADD_DEFINITIONS(-DUSE_PROFILER)
ENDIF (USE_PROFILER)

ADD_LIBRARY(${LOG_LIB_NAME} ${LIBRARY_TYPE} ${LOG_SOURCES} ${LOG_HEADERS})

TARGET_LINK_LIBRARIES( ${LOG_LIB_NAME} ${Qt5Core_LIBRARIES} )

INSTALL (
   TARGETS ${LOG_LIB_NAME}
   RUNTIME DESTINATION ${INSTALL_BIN_DIR}
   LIBRARY DESTINATION ${INSTALL_LIB_DIR}
   ARCHIVE DESTINATION ${INSTALL_LIB_DIR}
)

IF (INSTALL_HEADERS)
    FILE(GLOB INSTALL_HEADERS  "*.hpp" )
    STRING(REPLACE ${CMAKE_ROOT_SOURCES} ""  INSTALL_PATH ${PROJECT_SOURCE_DIR})
    INSTALL (
        FILES  ${INSTALL_HEADERS}
        DESTINATION ${INSTALL_SRC_DIR}/${INSTALL_PATH}/
    )
ENDIF (INSTALL_HEADERS)
