PROJECT(${SERIAL_LIB_NAME})

file(GLOB_RECURSE SERIAL_SOURCES *cpp *.hpp)

ADD_LIBRARY(${SERIAL_LIB_NAME} ${LIBRARY_TYPE} ${SERIAL_SOURCES} )

set_target_properties(${SERIAL_LIB_NAME}  PROPERTIES AUTOMOC TRUE)
INCLUDE_DIRECTORIES(${Qt5SerialPort_INCLUDE_DIRS})

TARGET_LINK_LIBRARIES( ${SERIAL_LIB_NAME} ${Qt5SerialPort_LIBRARIES})

INSTALL (
   TARGETS ${SERIAL_LIB_NAME}
   RUNTIME DESTINATION ${INSTALL_BIN_DIR}
   LIBRARY DESTINATION ${INSTALL_LIB_DIR}
   ARCHIVE DESTINATION ${INSTALL_LIB_DIR}
)

IF (INSTALL_HEADERS)
    FILE(GLOB INSTALL_HEADERS  "*.hpp" )
    STRING(REPLACE ${CMAKE_ROOT_SOURCES} ""  INSTALL_PATH ${PROJECT_SOURCE_DIR})
    INSTALL (
        FILES  ${INSTALL_HEADERS}
        DESTINATION ${INSTALL_SRC_DIR}/${INSTALL_PATH}/
    )
ENDIF (INSTALL_HEADERS)
