PROJECT(${VIDEO_INPUT_LIB_NAME})

file(GLOB_RECURSE VIDEO_INPUT_LIB_SOURCES *cpp *.hpp)

ADD_LIBRARY(${VIDEO_INPUT_LIB_NAME} ${LIBRARY_TYPE} ${VIDEO_INPUT_LIB_SOURCES} )

INSTALL (
    TARGETS ${VIDEO_INPUT_LIB_NAME}
    RUNTIME DESTINATION ${INSTALL_BIN_DIR}
    LIBRARY DESTINATION ${INSTALL_LIB_DIR}
    ARCHIVE DESTINATION ${INSTALL_LIB_DIR}
    )

IF (INSTALL_HEADERS)
    FILE(GLOB INSTALL_HEADERS  "*.hpp" )
    STRING(REPLACE ${CMAKE_ROOT_SOURCES} ""  INSTALL_PATH ${PROJECT_SOURCE_DIR})
    INSTALL (
        FILES  ${INSTALL_HEADERS}
        DESTINATION ${INSTALL_SRC_DIR}/${INSTALL_PATH}/
    )
ENDIF (INSTALL_HEADERS)
