PROJECT(${ALGO_TEST_PROJECT_EXE_NAME})

file(GLOB_RECURSE TEST_PROJECT_EXE_NAME_SRC *cpp)
file(GLOB_RECURSE TEST_PROJECT_EXE_NAME_HEADERS *.hpp)


ADD_EXECUTABLE(${ALGO_TEST_PROJECT_EXE_NAME} ${TEST_PROJECT_EXE_NAME_SRC} ${TEST_PROJECT_EXE_NAME_HEADERS})
include_directories(${Qt5Network_INCLUDE_DIRS})



TARGET_LINK_LIBRARIES( ${ALGO_TEST_PROJECT_EXE_NAME} ${COMMON_LIB_NAME})

SET (MAIN_BIN_DIR  ${INSTALL_BIN_DIR}/)
add_definitions(-D__INSTALL_BIN_DIR__="${CMAKE_INSTALL_PREFIX}/${MAIN_BIN_DIR}")


INSTALL (
   TARGETS ${ALGO_TEST_PROJECT_EXE_NAME}
   RUNTIME DESTINATION ${INSTALL_BIN_DIR}
   LIBRARY DESTINATION ${INSTALL_LIB_DIR}
   ARCHIVE DESTINATION ${INSTALL_LIB_DIR}
)
