PROJECT(${TEST_PROJECT_EXE_NAME})

file(GLOB_RECURSE TEST_PROJECT_EXE_NAME_SRC *cpp)
file(GLOB_RECURSE TEST_PROJECT_EXE_NAME_HEADERS *.hpp)


ADD_EXECUTABLE(${TEST_PROJECT_EXE_NAME} ${TEST_PROJECT_EXE_NAME_SRC} ${TEST_PROJECT_EXE_NAME_HEADERS})
INCLUDE_DIRECTORIES(${Qt5Network_INCLUDE_DIRS})

find_package(OpenSSL)
TARGET_LINK_LIBRARIES( ${TEST_PROJECT_EXE_NAME} ${COMMON_LIB_NAME})


SET (MAIN_BIN_DIR  ${INSTALL_BIN_DIR}/)
add_definitions(-D__INSTALL_BIN_DIR__="${CMAKE_INSTALL_PREFIX}/${MAIN_BIN_DIR}")

INSTALL (
   TARGETS ${TEST_PROJECT_EXE_NAME}
   RUNTIME DESTINATION ${INSTALL_BIN_DIR}
   LIBRARY DESTINATION ${INSTALL_LIB_DIR}
   ARCHIVE DESTINATION ${INSTALL_LIB_DIR}
)
