PROJECT(${VIDEO_FINALIZER_PROJECT_EXE_NAME})

file(GLOB_RECURSE TEST_PROJECT_EXE_NAME_SRC *cpp)
file(GLOB_RECURSE TEST_PROJECT_EXE_NAME_HEADERS *.hpp)


ADD_EXECUTABLE(${VIDEO_FINALIZER_PROJECT_EXE_NAME} ${TEST_PROJECT_EXE_NAME_SRC} ${TEST_PROJECT_EXE_NAME_HEADERS})


TARGET_LINK_LIBRARIES( ${VIDEO_FINALIZER_PROJECT_EXE_NAME} ${COMMON_LIB_NAME})

INSTALL (
   TARGETS ${VIDEO_FINALIZER_PROJECT_EXE_NAME}
   RUNTIME DESTINATION ${INSTALL_BIN_DIR}
   LIBRARY DESTINATION ${INSTALL_LIB_DIR}
   ARCHIVE DESTINATION ${INSTALL_LIB_DIR}
)
