PROJECT(${SMTP_LIB_NAME})

file(GLOB_RECURSE SMTP_SOURCES CSMTPSender.cpp SmtpClient-for-Qt/src/*.cpp)

ADD_LIBRARY(${SMTP_LIB_NAME} ${LIBRARY_TYPE} ${SMTP_SOURCES} ${SMTP_HEADERS})

INCLUDE_DIRECTORIES(${Qt5Network_INCLUDE_DIRS})

TARGET_LINK_LIBRARIES( ${SMTP_LIB_NAME} ${Qt5Network_LIBRARIES} ${Qt5Core_LIBRARIES} )

set_target_properties(${SMTP_LIB_NAME}  PROPERTIES AUTOMOC TRUE)

INSTALL (
   TARGETS ${SMTP_LIB_NAME}
   RUNTIME DESTINATION ${INSTALL_BIN_DIR}
   LIBRARY DESTINATION ${INSTALL_LIB_DIR}
   ARCHIVE DESTINATION ${INSTALL_LIB_DIR}
)

IF (INSTALL_HEADERS)
   FILE(GLOB INSTALL_HEADERS  "*.hpp" )
   INSTALL (
      FILES  ${INSTALL_HEADERS}
      DESTINATION ${INSTALL_SRC_DIR}/smtp/
      )
ENDIF (INSTALL_HEADERS)

