PROJECT(${ZIP_LIB_NAME})

file(GLOB_RECURSE ZIP_LIB_SOURCES *cpp)
file(GLOB_RECURSE ZIP_LIB_HEADERS *.hpp)

ADD_LIBRARY(${ZIP_LIB_NAME} ${LIBRARY_TYPE} ${ZIP_LIB_SOURCES} ${ZIP_LIB_HEADERS})

IF (UNIX)
    FIND_PACKAGE( ZLIB REQUIRED )
    TARGET_LINK_LIBRARIES( ${ZIP_LIB_NAME} minizip )
ENDIF (UNIX)

IF (WIN32)
    TARGET_LINK_LIBRARIES( ${ZIP_LIB_NAME} C:/libs/zlib.lib ) #windows version build with patch (minizip included, read README)
ENDIF (WIN32)

TARGET_LINK_LIBRARIES( ${ZIP_LIB_NAME} ${ZLIB_LIBRARIES} )

INCLUDE_DIRECTORIES(${ZLIB_INCLUDE_DIRS})

INSTALL (
   TARGETS ${ZIP_LIB_NAME}
   RUNTIME DESTINATION ${INSTALL_BIN_DIR}
   LIBRARY DESTINATION ${INSTALL_LIB_DIR}
   ARCHIVE DESTINATION ${INSTALL_LIB_DIR}
)

IF (INSTALL_HEADERS)
   FILE(GLOB INSTALL_HEADERS  "*.hpp" )
   INSTALL (
      FILES  ${INSTALL_HEADERS}
      DESTINATION ${INSTALL_SRC_DIR}/zip/
      )
ENDIF (INSTALL_HEADERS)

